--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,16 +2,18 @@ version: "3"
 services:
   user-service:
     build:
-      context: user-service
+      context: ./user-service
       dockerfile: Dockerfile
     image: user-service:1
   staff-service:
-    build: staff-service
+    build:
+      context: ./staff-service
+      dockerfile: Dockerfile
     image: staff-service:1
   consumer-service:
     build:
-     context: ./consumer-service
-     dockerfile: Dockerfile
+      context: ./consumer-service
+      dockerfile: Dockerfile
     image: consumer-service:1
     links:
       - user-service
